--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 h2 {
     font-family: Montserrat;
     font-size: 32px;
-    color: #444;
+    color: green;
     font-weight: 600;
     letter-spacing: -3px;
 }
