--- a/style.css
+++ b/style.css
@@ -75,10 +75,12 @@ div.contenido img {
 .pie {
     clear: both;
     color: white;
+    bottom: 0;
     background-color: #2C3E50;
     min-height: 5px;
     padding: 1px;
     text-align: center;
+    position: absolute;
 }
 
 @media (max-width: 640px) {
