--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ h2 {
     width: 65%;
     margin-bottom: 50px;
 }
+
+.articulo ol img{
+    display: block;
+    margin: auto;
+}
 .opcion{
     text-align: center;
     margin-bottom: 50px;
@@ -130,7 +135,7 @@ div.contenido img {
 
 .paginacion ul li a {
 	display:block;
-	padding:10px 20px;
+	padding:5px 10px;
 	color:#fff;
 	background:#024959;
 	text-decoration: none;
